# shell

./: CMakeLists.txt  README.md
src/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
src/functions/: functions.cpp  functions.h
src/shell/: shell.cpp  shell.h
src/tests/: CTestTestfile.cmake  Makefile  test_shell
tests/: CMakeLists.txt
